# dinf

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  environment-gpu.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  mergify.yml
.github/workflows/: docs.yaml  lint.yaml  tests.yaml  wheel.yaml
0.1.0/: api.html  introduction.html  search.html
0.1.0/_modules/: index.html
0.1.0/_modules/dinf/: dinf.html  vcf.html
0.1.0a5/_modules/dinf/: feature_extractor.html
0.1.0a6/: api.html  cli.html
0.1.0a6/_sources/: api.md
0.1.0a7/: objects.inv  searchindex.js
0.1.0a7/_modules/dinf/: discriminator.html  parameters.html
0.1.0a8/: genindex.html
0.1.0a8/_modules/dinf/: store.html
0.1.0a8/_sources/: introduction.md
0.2.0/: .buildinfo  CHANGELOG.html  api.html  cli.html  development.html  genindex.html  installation.html  introduction.html  py-modindex.html  search.html
0.2.0/_modules/: index.html
0.2.0/_modules/dinf/: dinf.html  dinf_model.html  discriminator.html  feature_extractor.html  misc.html  parameters.html  plot.html  store.html  vcf.html
0.2.0/_sources/: development.md  installation.md  introduction.md
0.2.0/_sources/guide/: empirical_data.md  features.ipynb  testing_a_model.ipynb
0.2.0/guide/: abc-gan.html  abc.html  accuracy.html  creating_a_model.html  empirical_data.html  features.html  mcmc-gan.html  multiple_demes.html  performance.html  pg-gan.html  testing_a_model.html
0.3.0/: .buildinfo  CHANGELOG.html  api.html  cli.html  development.html  genindex.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.3.0/_modules/: index.html
0.3.0/_modules/dinf/: dinf.html  dinf_model.html  discriminator.html  feature_extractor.html  misc.html  parameters.html  plot.html  store.html  vcf.html
0.3.0/_sources/: CHANGELOG.md  cli.md
0.3.0/_sources/guide/: performance.md  testing_a_model.md
0.3.0/guide/: abc-gan.html  abc.html  accuracy.html  creating_a_model.html  empirical_data.html  features.html  mcmc-gan.html  multiple_demes.html  performance.html  pg-gan.html  testing_a_model.html
0.4.0/: CHANGELOG.html  api.html  development.html  genindex.html  installation.html  objects.inv  py-modindex.html
0.4.0/_modules/: index.html
0.4.0/_modules/dinf/: dinf.html  dinf_model.html  feature_extractor.html  misc.html  parameters.html  plot.html
0.4.0/_sources/: CHANGELOG.md  api.md  cli.md
0.4.0/_sources/guide/: creating_a_model.md  features.md  testing_a_model.md
0.4.0/_static/: custom.css
0.4.0/guide/: accuracy.html  empirical_data.html  features.html  performance.html  smc.html  testing_a_model.html
0.5.0/: .buildinfo  api.html  development.html  installation.html  objects.inv  search.html  searchindex.js
0.5.0/_sources/: cli.md  introduction.md
0.5.0/_sources/guide/: accuracy.ipynb  creating_a_model.md  features.md  mc.ipynb  testing_a_model.md
0.5.0/guide/: accuracy.html  features.html  mc.html  multiple_demes.html  testing_a_model.html
dinf/: __init__.py  __main__.py  cache.py  cli.py  dinf.py  dinf_model.py  discriminator.py  feature_extractor.py  generator.py  genobuilder.py  mcmc.py  misc.py  models.py  parameters.py  plot.py  report.py  store.py  tabulate.py  vcf.py
docs/: Makefile  _config.yml  _toc.yml  api.md  build.sh  cli.md  installation.md  introduction.md
docs/_ext/: inject_version.py  intersphinx_aliases.py
docs/guide/: Makefile  abc.ipynb  abc.md  accuracy.ipynb  accuracy.md  creating_a_model.md  diagram.tex  features.md  gfo.md  mc.ipynb  multiple_demes.md  smc.ipynb  testing_a_model.md
examples/: README.md
examples/bottleneck/: model.py
examples/gutenkunst2009/: README.md  model.py
examples/isolation_with_migration/: model.py
examples/one_population_growth/: model.py
examples/post_ooa/: model.py
examples/two_pop_ooa/: model.py
latest/_modules/dinf/: genobuilder.html
main/: .buildinfo  CHANGELOG.html  api.html  cli.html  development.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/_modules/: index.html
main/_modules/dinf/: dinf.html  dinf_model.html  discriminator.html  feature_extractor.html  genobuilder.html  misc.html  parameters.html  plot.html  store.html  vcf.html
main/_sources/: api.md  cli.md  introduction.md
main/_sources/guide/: abc-gan.md  abc.ipynb  accuracy.ipynb  features.ipynb  mcmc-gan.md  pg-gan.md  smc.ipynb  testing_a_model.ipynb
main/_sources/tutorial/: 01.md
main/guide/: abc-gan.html  abc.html  accuracy.html  creating_a_model.html  empirical_data.html  features.html  gfo.html  mc.html  mcmc-gan.html  multiple_demes.html  performance.html  pg-gan.html  smc.html  testing_a_model.html
main/tutorial/: 01.html
requirements/: docs.txt  lint.txt  minimal.txt  test.txt
tests/: __init__.py  conftest.py  test_cli.py  test_dinf.py  test_dinf_model.py  test_discriminator.py  test_feature_extractor.py  test_generator.py  test_genobuilder.py  test_log_prob.py  test_misc.py  test_parameters.py  test_plot.py  test_store.py  test_tabulate.py  test_vcf.py
