[metadata]
name = dinf
author = Graham Gower
license = MIT
description = discriminator-based inference of population parameters
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = dinf
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    arviz
    numpy
    tensorflow >= 2.4.0
    msprime >= 1.0.2  # demes support
    demes
    zeus-mcmc
    gradient-free-optimization
setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts =
    demes = dinf.__main__:cli

[flake8]
# black-compatible settings
max-line-length = 88
extend-ignore = E203, W503

[tool.black]
target_version = py37

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning:tensorflow
    ignore::DeprecationWarning:h5py
