[metadata]
name = dinf
author = Graham Gower
license = MIT
description = discriminator-based inference of population parameters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RacimoLab/dinf
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Documentation = https://racimolab.github.io/dinf/
    Source Code = https://github.com/RacimoLab/dinf
    Bug Tracker = https://github.com/RacimoLab/dinf/issues

[options]
packages = dinf
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    arviz
    cyvcf2
    emcee
    numpy
    jax
    flax
    optax
    msprime >= 1.0.3  # performance improvements
    demes
setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts =
    dinf = dinf.__main__:main

[flake8]
# black-compatible settings
max-line-length = 88
extend-ignore = E203, W503
per-file-ignores =
    tests/__init__.py:E402

[mypy]
files = dinf, tests
plugins = numpy.typing.mypy_plugin
exclude = dinf/report.py
python_version = 3.7
warn_unused_ignores = True

[mypy-arviz.*]
ignore_missing_imports = True

[mypy-cyvcf2.*]
ignore_missing_imports = True

[mypy-emcee.*]
ignore_missing_imports = True

[mypy-msprime.*]
ignore_missing_imports = True

[mypy-optax.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-tskit.*]
ignore_missing_imports = True

[tool.black]
target_version = py37

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning:flatbuffers
    ignore::DeprecationWarning:tree
